src/test/run-pass/typestate-transitive.rs
pred p(int i) -> bool { true }

fn f(int i) : p(i) -> int { i }

fn g(int i) : p(i) -> int { f(i) }

fn main() {
}
